<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".Client.Login_signup.Signup">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/foodie"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_fname"
        android:layout_below="@+id/app_logo"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/fname"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_lname"
        android:layout_below="@+id/signup_fname"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/lname"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_email"
        android:layout_below="@+id/signup_lname"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password1"
        android:layout_below="@+id/signup_email"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_password2"
        android:layout_below="@+id/signup_password1"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmpassword"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/signup_password2"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Have an account?"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/signup_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/have_an_account"
            android:text="Login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:clickable="true" />
    </RelativeLayout>

</RelativeLayout>