<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/foodie"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login_username"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_below="@+id/login_username"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>



    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create an Account"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/forgot_password"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="perform_action"/>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="perform_action"/>



</RelativeLayout>